hphp/test/quick/record-init.php.expectf
Fatal error: Record field 'Foo::y' not initialized in %s/record-init.php on line 8
